    {#} Replacing of <yyyy>, <yy>, <mm>, ... identifiers for sectiondir was missed in some places
    {#} No segmentation fault if terminal window is too big (#213)
    {#} Correctly apply <sample/proof/...>_dirs_priority to files
    {#} reqfiller not realizing requests are done (#32)
    {#} !addtvmaze -s The.Twilight.Zone gaves wrong showname result (#241)
    {^} Requests can be filled from sites without checking the routes. (#168)
    {^} All irc commands with * as allowed input for sitename should output stuff in alphabetical order. (#163)
    {^} [MKDIR Denied] msg shows path with denied releasename.
    {^} !autoinvite warns you if no IRCNick is specified for the site.
    {^} !maxupperrip can show actual value now.
    {^} !findaffil has improved irc output.
    {^} backup on startup will only be executed after sites.dat has been successfully decrypted. (#169)
    {^} !leechers code improved.
    {^} Support for regex in IMDb Language rule
    {^} Detection for iOFTPD sites
    {^} IMDb parsing code update due to recent website changes
    {^} taskdirlist shows sitename on 'can not dirlist' announce (#227)
    {^} !indexquery search count is selectable (#188)
    {^} Skip lookup of extra infos for skipped groups (#218)
    {^} Addpre command does not need to contain the section anymore (it was ignored anyway)
    {^} Less flickering of console window at startup on Windows platform
    {^} Send nfo for NFOFIX, SFVFIX, SAMPLEFIX, etc instead of creating only an empty dir
    {^} more reliable maxidle interval handling
    {^} Free and reassign slots faster on completed races of single files
    {^} If available parse complete_tag on requests to determine completion
    {-} TheTVDB support as public API goes offline sooner or later (#175)
    {-} !sectionins command -> edit slftp.precatcher manually! (#157)
    {-} old language base (slftp.languages)
    {-} Support for older FPC compilers (at least version 3.2.0 needed!)
